# Mplp

./: Pipfile  README.md  pyproject.toml  run.py
models/: __init__.py  base.py  binary.py  classification.py  multiclass.py  regression.py
trainer/: run.py
utils/: __init__.py  args.py  dataloader.py  logger.py  preprocess.py  set_seed.py
utils/metrics/: __init__.py  evaluation.py
